[workspace]
members = [
    "cerebro/lib/model",
    "cerebro/stack/server",
    "cerebro/stack/client",
    "cerebro/stack/watcher",
    "cerebro/stack/fs",
    "cerebro/stack/tower",
    "cerebro/stack/pipeline",
    "cerebro/stack/report-wasm",
    "cerebro/stack/ciqa",
    "cerebro/stack/gp",
]
resolver = "2"
