[package]
name = "cerebro"
version = "0.12.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: meta-metagenomic diagnostics for clinical production"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

# Required system dependences for compilation; example install Debian:
# sudo apt install cmake build-essentials


[[bin]]
name = "cerebro"
path = "src/cli.rs"


[lib]
name = "cerebro"

[dependencies]

cerebro-watcher = { path = "../stack/watcher" }
cerebro-fs = { path = "../stack/fs" }
cerebro-client = { path = "../stack/client" }
cerebro-model = { path = "../lib/model" }


anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10.3"
env_logger = "0.9.0"
niffler = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
anstyle = "1.0.1"
taxonomy = "0.10.0"
needletail = "0.5.1"
argon2 = "0.5.3"
handlebars = "5.1.2"
rpassword = "7.2.0"
rust-embed = { version = "6.8.1", features = ["compression"] }
bcrypt = "0.15.0"
rcgen = "0.11.1"
rsa = "0.9.2"
rand_core = { version = "0.6.4", features = ["std"] }
base64 = "0.21.2"
colored = "2.0"
toml = "0.7.6"
rand = "0.8.5"
rayon = "1.10.0"
rprompt = "2.1.1"

[features]
default = []
local = []