[package]
name = "cerebro-ciqa"
version = "0.12.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: continuous integration of quality assurance"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[[bin]]
name = "cerebro-ciqa"
path = "src/cli.rs"

[lib]
name = "cerebro_ciqa"


[dependencies]

cerebro-client = { git = "https://github.com/esteinig/cerebro", package = "cerebro-client", branch = "main" }
cerebro-model = { git = "https://github.com/esteinig/cerebro", package = "cerebro-model", branch = "main" }
cerebro-pipeline = { git = "https://github.com/esteinig/cerebro", package = "cerebro-pipeline", branch = "main" }
meta-gpt = { git = "https://github.com/esteinig/meta-gpt", branch = "main", features = [], default-features = false }





anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
itertools = "0.10.3"
env_logger = "0.9.0"
log = "0.4"
csv = "1.2"
colored = "2.0"
ansi_term = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tabled = { version = "0.9.0", features = ["color"] }
notify = { version = "6.1.1", features = ["serde"] }
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
niffler = "2.5.0"
anstyle = "1.0.6"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
actix-web-httpauth = "0.8.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
plotters = "0.3.7"
plotters-bitmap = "0.3.7"
taxonomy = "0.10.0"
rand = "0.9.0"
statrs = "0.18.0"
nvml-wrapper = "0.10.0"
rayon = "1.10.0"
ratatui = "0.29.0"

[features]
default = []
local = ["meta-gpt/local"]
