[package]
name = "cerebro-ciqa"
version = "1.0.0-alpha.1"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: continuous integration of quality assurance"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[[bin]]
name = "cerebro-ciqa"
path = "src/cli.rs"

[lib]
name = "cerebro_ciqa"


[dependencies]

# Internal Cerebro crates are consumed as in-tree workspace members via path
# dependencies, matching every other member (cf. cerebro/stack/server/Cargo.toml).
# Previously these tracked `branch = "main"`, which made cerebro-ciqa build against a
# moving upstream: non-reproducible, and prone to silent version skew against the rest
# of the workspace. Path deps give atomic cross-crate changes and a single, lockable
# dependency graph (`cargo build --workspace --locked`).
cerebro-fs = { path = "../fs" }
cerebro-client = { path = "../client" }
cerebro-model = { path = "../../lib/model" }
cerebro-pipeline = { path = "../pipeline" }

# meta-gpt is an external crate and is intentionally NOT vendored or refactored here
# (the PrefetchData -> run_local -> DiagnosticResult ingestion contract is held stable).
# It is pinned by an explicit commit for build reproducibility instead of tracking a
# branch. The `local` feature (below) enables on-device inference via `meta-gpt/local`,
# which pulls CUDA and is built only on a GPU-capable runner (see the build-local CI job).
#
# To advance the pin deliberately:
#   git ls-remote https://github.com/esteinig/meta-gpt <ref>   # resolve the commit
#   # update `rev` below, then `cargo update -p meta-gpt --precise <rev>` and commit Cargo.lock
# Pinned to esteinig/meta-gpt@main HEAD at integration time; re-pin deliberately
# (to a reviewed commit) before a production release.
meta-gpt = { git = "https://github.com/esteinig/meta-gpt", rev = "f97d55c19956c03f90a095fa8432ef4971aa9626", features = [], default-features = false }





anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
itertools = "0.10.3"
env_logger = "0.9.0"
log = "0.4"
csv = "1.2"
colored = "2.0"
ansi_term = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tabled = { version = "0.9.0", features = ["color"] }
notify = { version = "6.1.1", features = ["serde"] }
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
niffler = "2.5.0"
anstyle = "1.0.6"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
actix-web-httpauth = "0.8.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
plotters = "0.3.7"
plotters-bitmap = "0.3.7"
taxonomy = "0.10.0"
rand = "0.9.0"
statrs = "0.18.0"
nvml-wrapper = "0.10.0"
rayon = "1.10.0"
ratatui = "0.29.0"
glob = "0.3.3"
regex = "1.12.2"

[features]
# Default build is CPU-only and feature-free: it compiles on the standard CI runners and
# is what the workspace `cargo build`/`cargo check` exercises. The `local` feature enables
# on-device META-GPT inference (`meta-gpt/local`), which pulls CUDA/cuDNN and is intended
# for GPU hosts and the NVIDIA container (templates/stack/docker/Dockerfile.gpt.dgx); it is
# built by the gated `build-local` CI job, not the default build.
default = []
local = ["meta-gpt/local"]
