[package]
name = "cerebro-fs"
version = "0.12.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: file system command-line client and library for interacting with SeaweedFS and Cerebro API"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]


[lib]
name = "cerebro_fs"

[[bin]]
name = "cerebro-fs"
path = "src/cli.rs"

[dependencies]

cerebro-model = { path = "../../lib/model" }
cerebro-client = { path = "../client" }

anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10.3"
env_logger = "0.9.0"
niffler = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
toml = "0.7.6"
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
anstyle = "1.0.1"
rpassword = "7.2.0"
actix-web-httpauth = "0.8.0"
fancy-regex = "0.11.0"
actix-web = "4"
tar = "0.4.40"
rayon = "1.10.0"
blake3 = "1.5.1"
dialoguer = "0.11.0"

[features]
default = []
local = []