[package]
name = "cerebro-gp"
version = "0.11.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: generative practioner for metagenomic diagnostics"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[[bin]]
name = "meta-gp"
path = "src/cli.rs"

[lib]
name = "cerebro_gp"

[dependencies]

# Model library dependency to access shared module structs and definitions
# to use in endpoints and client responses
cerebro-model = { path = "../../lib/model"}
cerebro-client = { path = "../client" }
cerebro-pipeline = { path = "../pipeline" }


anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
itertools = "0.10.3"
env_logger = "0.9.0"
log = "0.4"
csv = "1.2"
colored = "2.0"
wax = "0.5.0"
needletail = "0.5.1"
globwalk = "0.9.1"
ansi_term = "0.12.1"
chrono = "0.4.37"
serde = { version = "1.0", features = ["derive"] }
tabled = { version = "0.9.0", features = ["color"] }
notify = { version = "6.1.1", features = ["serde"] }
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
niffler = "2.5.0"
anstyle = "1.0.6"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
actix-web-httpauth = "0.8.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
async-openai = "0.28.0"
petgraph = "0.7.1"
tokio = { version = "1.44.1", features = ["process", "rt-multi-thread"] }
anthropic-api = "0.0.5"
serde_plain = "1.0.2"
plotters = "0.3.7"

tokenizers = { version = "0.21.1", optional = true }
hf-hub = { version = "0.4.2", optional = true }
regex = "1.11.1"
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"], optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"], optional = true }
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
nvml-wrapper = "0.10.0"

[features]
default = []
local = ["candle-core", "candle-transformers", "tokenizers", "hf-hub"]
