[package]
name = "cerebro-pipe"
version = "0.8.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: pipeline module for internal utility tools and output handling"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[[bin]]
name = "cerebro-pipe"
path = "src/cli.rs"

[lib]
name = "cerebro_pipe"
path = "src/lib.rs"

[dependencies]


anyhow = "1.0"
thiserror = "1.0"
taxonomy = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.3"
env_logger = "0.9.0"
log = "0.4"
csv = "1.2"
wax = "0.5.0"
tabled = { version = "0.9.0", features = ["color"] }
colored = "2.0"
needletail = "0.5.1"
globwalk = "0.9.1"
ansi_term = "0.12.1"
chrono = "0.4.37"
statistical = "1.0.0"
niffler = "2.3"
rayon = "1.10.0"
memchr = "2.7.2"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
anstyle = "1.0.6"
fancy-regex = "0.11.0"

vircov = { git = "https://github.com/esteinig/vircov", branch = "main" }
scrubby = { git = "https://github.com/esteinig/scrubby", branch = "main" }

tar = "0.4.41"
reqwest = { version = "0.12.7", features = ["blocking"] }
