[package]
name = "cerebro-report-wasm"
version = "0.1.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: reporting module for compiling PDF reports with WebAssembly"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.39"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.76"
parking_lot = "0.12.3"
send_wrapper = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tera = "1.20.0"
typst = "0.12.0"
typst-assets = { version = "0.12.0", features = ["fonts"] }
typst-pdf = "0.12.0"
typst-svg = "0.12.0"
wasm-bindgen = "0.2.99"
