[package]
name = "cerebro-report-wasm"
version = "0.1.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: reporting module for compiling PDF reports with WebAssembly"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "cerebro-report"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4.39"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.76"
parking_lot = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tera = { version = "1", default-features = false }
typst = "0.12.0"
typst-assets = { version = "0.12.0", features = ["fonts"] }
typst-pdf = "0.12.0"
typst-svg = "0.12.0"
wasm-bindgen = "0.2.99"
serde-wasm-bindgen = "0.6.5"

# Command-line interface feature
clap = { version = "4", optional = true, features = ["derive", "env", "unstable-styles", "wrap_help"] }
anstyle = { version = "1", optional = true }
toml = { version = "0.8.20", optional = true}
uuid = { version = "1.13.1", features = ["v4"] }


[features]
default = []
cli = ["clap", "anstyle", "toml"]
