[package]
name = "cerebro-report"
version = "0.8.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: reporting module for command-line client and compiling WASM"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]


[[bin]]
name = "cerebro-report"
path = "src/interface.rs"

[lib]
name = "cerebro_report"
# crate-type = ["cdylib"]

[dependencies]
typst = "0.11"
typst-render = "0.11"
typst-svg = "0.11"
typst-pdf = "0.11.0"
typst-assets = { version = "0.11", features = ["fonts"] }
comemo = "0.4"


wasm-bindgen = "^0.2"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "^0.6"
web-sys = { version = "^0.3", features = [
    "console",
    "Window",
    "FontData",
    "Blob",
    "ImageData",
] }
console_error_panic_hook = "0.1.7"

fast_image_resize = "2.7.3"
ariadne = "0.4.0"
chrono = "0.4.30"
zune-inflate = { version = "0.2", default_features = false, features = ["gzip", "std"] }
tar = "0.4"
ureq = "2.9"
time = "0.3"
ttf-parser = "0.20"