[package]
name = "cerebro-report"
version = "0.8.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Cerebro: reporting module for command-line client and compiling WASM"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]


[[bin]]
name = "cerebro-report"
path = "src/cli.rs"

[lib]
name = "cerebro_report"

# crate-type = ["cdylib"]

[dependencies]

# Workflow library dependency to access module structs and definitions
# to use in endpoints e.g. to generate quality control summary tables  
# for the user from models in the database
cerebro-pipeline = { path = "../pipeline" }

# Model library dependency to access shared module structs and definitions
# to use in endpoints and client responses
cerebro-model = { path = "../../lib/model" }

anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
itertools = "0.10.3"
env_logger = "0.9.0"
log = "0.4"
csv = "1.2"
chrono = "0.4.37"
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
niffler = "2.5.0"
anstyle = "1.0.6"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
handlebars = "4.3.7"
toml = "0.7.6"

typst = "0.11"
typst-render = "0.11"
typst-svg = "0.11"
typst-pdf = "0.11.0"
typst-assets = { version = "0.11", features = ["fonts"] }
comemo = "0.4"
wasm-bindgen = "^0.2"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "^0.6"
web-sys = { version = "^0.3", features = [
    "console",
    "Window",
    "FontData",
    "Blob",
    "ImageData",
] }
console_error_panic_hook = "0.1.7"

fast_image_resize = "2.7.3"
ariadne = "0.4.0"
zune-inflate = { version = "0.2", default_features = false, features = ["gzip", "std"] }
tar = "0.4"
ureq = "2.9"
time = "0.3"
ttf-parser = "0.20"