[package]
name = "cerebro-worker"
version = "0.12.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Faktory workers for backend task scheduling in Cerebro"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[[bin]]
name = "cerebro-worker"
path = "src/main.rs"

[dependencies]
faktory = "0.13"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
once_cell = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }