[package]
name = "cerebro-worker"
version = "1.0.0-alpha.1"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Faktory workers for backend task scheduling in Cerebro"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gp", "cerebro", "clinical", "pathogen", "metagenomics"]
categories = ["science"]
license = "GPL-3"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[[bin]]
name = "cerebro-worker"
path = "src/main.rs"

[features]
default = []
# Real S3/Glacier cold-store backend for archival (S4-4, D1). Off by default — the
# cold tier defaults to the filesystem backend (a mounted cold disk / NFS). Verify
# the rust-s3 version/features against your platform before enabling.
s3 = ["dep:rust-s3"]

[dependencies]
cerebro-model = { path = "../../lib/model" }
cerebro-client = { path = "../client" }
cerebro-fs = { path = "../fs" }
faktory = "0.13"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
actix-web = "4"
prometheus = "0.13"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
once_cell = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# S3 cold-store backend (optional; enabled by the `s3` feature). Blocking API to
# match the synchronous ObjectStore trait. Pin/verify for your platform.
rust-s3 = { version = "0.34", default-features = false, features = ["blocking", "tokio-rustls-tls"], optional = true }